# Easel

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TRADEMARKS.md
.cursor/: environment.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  libheif-windows.lock.json
.github/ISSUE_TEMPLATE/: feature.yml
.github/actions/ci-visual/: action.yml  package-lock.json  package.json  stage.sh  upload.mjs  write-manifest.sh
.github/actions/setup-rust/: action.yml
.github/ci-visual/: build_gallery.py  select_smoke_views.py  test_build_gallery.py  test_select_smoke_views.py
.github/scripts/: check-cxx-gen-align.py  install-libheif-windows.ps1  sync-easel-deps-pin.py  sync-rust-pins.py  test_check_cxx_gen_align.py  test_sync_rust_pins.py
.github/workflows/: archive-merged-branch.yml  ci-visual-gallery.yml  ci.yml  sync-easel-deps.yml  sync-rust-pins.yml
apps/easel-cli/: Cargo.toml
apps/easel-cli/src/: main.rs
apps/easel-desktop/: Cargo.toml  build.rs
apps/easel-desktop/qml/: main.qml
apps/easel-desktop/qml/components/: MonitorPreview.qml  PhotoCard.qml
apps/easel-desktop/src/: app_controller.rs  apply_service.rs  automation_controller.rs  automation_session.rs  cli.rs  compose_controller.rs  discover_controller.rs  display_session.rs  fixtures.rs  library_controller.rs  library_session.rs  main.rs  profile_controller.rs
apps/easel-plasma-wallpaper/: README.md  install.sh  metadata.json
apps/easel-plasma-wallpaper/contents/config/: main.xml
apps/easel-plasma-wallpaper/contents/ui/: main.qml
apps/wallspan-desktop/: Cargo.toml  build.rs
apps/wallspan-desktop/qml/: main.qml
apps/wallspan-desktop/qml/components/: MonitorPreview.qml  PhotoCard.qml
apps/wallspan-desktop/src/: app_controller.rs  compose_controller.rs  display_session.rs  fixtures.rs  main.rs
crates/easel-core/: Cargo.toml
crates/easel-core/src/: arrangement.rs  asset.rs  collection.rs  display.rs  display_group.rs  dynamic_still.rs  history.rs  hotplug.rs  layout_fixtures.rs  lib.rs  physical.rs  profile.rs  rotation.rs  schedule.rs  suitability.rs
crates/easel-dynamic/: Cargo.toml  build.rs
crates/easel-dynamic/examples/: write_h24.rs
crates/easel-dynamic/src/: bundle.rs  encode.rs  heic.rs  lib.rs  metadata.rs  persist.rs  plasma_day_night.rs
crates/easel-library/: Cargo.toml
crates/easel-library/src/: cache.rs  index.rs  lib.rs  probe.rs  store.rs  watch.rs
crates/easel-platform/: Cargo.toml
crates/easel-platform/src/: appearance.rs  lib.rs  macos.rs  plasma.rs  plasma_state.rs  probe.rs  windows_desktop.rs
crates/easel-providers/: Cargo.toml
crates/easel-providers/src/: lib.rs  openverse.rs
crates/easel-providers/tests/fixtures/: openverse_images_search.json
crates/easel-render/: Cargo.toml
crates/easel-render/src/: decode.rs  fit.rs  lib.rs  plan.rs  poster.rs  raster.rs  resize.rs
crates/easel-render/tests/: raster_regression.rs  visual_artifacts.rs
crates/easel-scheduler/: Cargo.toml
crates/easel-scheduler/src/: catalog.rs  history.rs  lib.rs  select.rs  solar.rs  store.rs  tick.rs
crates/wallspan-core/: Cargo.toml
crates/wallspan-core/src/: arrangement.rs  asset.rs  display.rs  lib.rs  profile.rs
crates/wallspan-platform/: Cargo.toml
crates/wallspan-platform/src/: lib.rs  plasma.rs  probe.rs  windows_desktop.rs
crates/wallspan-providers/: Cargo.toml
crates/wallspan-providers/src/: lib.rs
crates/wallspan-render/: Cargo.toml
crates/wallspan-render/src/: decode.rs  fit.rs  lib.rs  plan.rs  raster.rs
crates/wallspan-render/tests/: raster_regression.rs  visual_artifacts.rs
docs/: ARCHITECTURE.md  DISTRIBUTION.md  IMAGE_PROVIDERS.md  LIVE_WALLPAPERS.md  PRODUCT.md  QUALITY.md  ROADMAP.md  ci-visual-assets-repo.md
docs/adr/: 0001-rust-qt-quick.md  0002-provider-compliance.md  0003-dynamic-and-live-wallpapers.md  0004-schedules-rotation-hotplug.md  0005-dynamic-stills.md  0006-apple-heic-dynamic-interchange.md  0007-plasma-dynamic-host-options.md  0008-plasma-wallpaper-plugin-host.md  0009-libheif-prebuilt-deps.md
tools/: easel-deps.bundle
tools/dev/: three-displays.sh
tools/easel-deps/: README.md  SETUP.md  pending-remote.patch
tools/easel-deps/.github/workflows/: build-libheif-windows.yml  sync-upstream.yml
tools/easel-deps/scripts/: sync-upstream.py
