[workspace]
resolver = "2"
members = [
    "apps/easel-desktop",
    "crates/easel-core",
    "crates/easel-library",
    "crates/easel-platform",
    "crates/easel-providers",
    "crates/easel-render",
]
default-members = [
    "crates/easel-core",
    "crates/easel-library",
    "crates/easel-platform",
    "crates/easel-providers",
    "crates/easel-render",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
publish = false
license = "MPL-2.0"
repository = "https://github.com/fritz-fritz/easel"

[workspace.dependencies]
async-trait = "0.1"
cxx = "1.0.176"
cxx-qt = "0.9.1"
cxx-qt-build = "0.9.1"
cxx-qt-lib = "0.9.1"
image = { version = "=0.25.8", default-features = false, features = [
    "bmp",
    "gif",
    "jpeg",
    "png",
    "tiff",
    "webp",
] }
notify = "7"
reqwest = { version = "0.12", default-features = false, features = [
    "blocking",
    "json",
    "rustls-tls",
] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
toml = "0.8"
tracing = "0.1"
url = { version = "2.5", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Com",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
struct_excessive_bools = "allow"
