[package]
name = "wallspan-desktop"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
cxx.workspace = true
cxx-qt.workspace = true
cxx-qt-lib = { workspace = true, features = ["qt_full"] }
wallspan-core = { path = "../../crates/wallspan-core" }
wallspan-render = { path = "../../crates/wallspan-render" }

[build-dependencies]
cxx-qt-build = { workspace = true, features = ["link_qt_object_files"] }

[lints]
workspace = true
