[package]
name = "easel-dynamic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
description = "Apple HEIC / Plasma dynamic still import and native bundle planning"

[dependencies]
base64 = "0.22"
easel-core = { path = "../easel-core" }
easel-render = { path = "../easel-render" }
image = { workspace = true }
libheif-rs = { version = "2.7", default-features = false, features = ["v1_17"] }
plist = "=1.7.0"
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

# Merged by `cargo vcpkg` on Windows CI (see libheif-sys docs).
[package.metadata.vcpkg]
git = "https://github.com/microsoft/vcpkg"
tag = "2026.05.25"
dependencies = ["libheif[aom]"]

[package.metadata.vcpkg.target.x86_64-pc-windows-msvc]
triplet = "x64-windows-static-md"

[lints]
workspace = true
