[package]
name = "easel-dynamic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true
description = "Apple HEIC / Plasma dynamic still import and native bundle planning"

[dependencies]
base64 = "0.22"
easel-core = { path = "../easel-core" }
easel-render = { path = "../easel-render" }
image = { workspace = true }
libheif-rs = { version = "2.7", default-features = false, features = ["v1_17"] }
plist = "=1.10.0"
serde = { workspace = true }
thiserror.workspace = true

[dev-dependencies]
tempfile = "3"

# Windows CI stages prebuilt MSVC libs via
# `.github/scripts/install-libheif-windows.ps1` (strukturag releases are
# source-only). Local Windows builds can use that script or cargo-vcpkg.
# `build.rs` links `advapi32` on MSVC because static x265 needs it and Rust
# 1.88+ no longer pulls that lib in via std.

[lints]
workspace = true
