[package]
name = "easel-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
directories = "6"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror.workspace = true
easel-core = { path = "../easel-core" }
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
