[package]
name = "easel-providers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
easel-core = { path = "../easel-core" }

[lints]
workspace = true
