[package]
name = "easel-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easel-core = { path = "../easel-core" }
libm.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
