[package]
name = "easel-scheduler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
easel-core = { path = "../easel-core" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml.workspace = true
uuid.workspace = true

[lints]
workspace = true
