[package]
name = "wallspan-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
