[package]
name = "wallspan-platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
wallspan-core = { path = "../wallspan-core" }
url.workspace = true

[target.'cfg(windows)'.dependencies]
windows.workspace = true

[lints]
workspace = true
